confirmed that spacing bug has been fixed in previous commit

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -482,9 +482,6 @@ button {
 .right-side {
   float: left;
   pointer-events: all;
-  p {
-    height: 22px;
-  }
 }
 
 .rigth-side:after {
